// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radios matches snapshot 1`] = `
<Radios
  id="example"
  name="example"
  role="radiogroup"
>
  <FormGroup
    id="example"
    inputType="radios"
    name="example"
    role="radiogroup"
  >
    <div
      className="nhsuk-form-group"
    >
      <div
        className="nhsuk-radios"
        id="example"
        role="radiogroup"
      >
        <Radio
          id="example-1"
          type="radio"
          value="yes"
        >
          <div
            className="nhsuk-radios__item"
          >
            <input
              aria-labelledby="example-1--label"
              className="nhsuk-radios__input"
              id="example-1"
              name="example"
              onChange={[Function]}
              type="radio"
              value="yes"
            />
            <Label
              className="nhsuk-radios__label"
              htmlFor="example-1"
              id="example-1--label"
            >
              <BaseLabel
                className="nhsuk-radios__label"
                htmlFor="example-1"
                id="example-1--label"
              >
                <label
                  className="nhsuk-label nhsuk-radios__label"
                  htmlFor="example-1"
                  id="example-1--label"
                >
                  Yes
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Radio>
        <Radio
          id="example-2"
          type="radio"
          value="no"
        >
          <div
            className="nhsuk-radios__item"
          >
            <input
              aria-labelledby="example-2--label"
              className="nhsuk-radios__input"
              id="example-2"
              name="example"
              onChange={[Function]}
              type="radio"
              value="no"
            />
            <Label
              className="nhsuk-radios__label"
              htmlFor="example-2"
              id="example-2--label"
            >
              <BaseLabel
                className="nhsuk-radios__label"
                htmlFor="example-2"
                id="example-2--label"
              >
                <label
                  className="nhsuk-label nhsuk-radios__label"
                  htmlFor="example-2"
                  id="example-2--label"
                >
                  No
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Radio>
      </div>
    </div>
  </FormGroup>
</Radios>
`;

exports[`Radios does not render the conditional content if checked is false 1`] = `
<Radios
  id="example"
  name="example"
  role="radiogroup"
>
  <FormGroup
    id="example"
    inputType="radios"
    name="example"
    role="radiogroup"
  >
    <div
      className="nhsuk-form-group"
    >
      <div
        className="nhsuk-radios nhsuk-radios--conditional"
        id="example"
        role="radiogroup"
      >
        <Radio
          checked={false}
          conditional={
            <p>
              Test
            </p>
          }
          id="example-1"
          type="radio"
          value="yes"
        >
          <div
            className="nhsuk-radios__item"
          >
            <input
              aria-labelledby="example-1--label"
              checked={false}
              className="nhsuk-radios__input"
              id="example-1"
              name="example"
              onChange={[Function]}
              type="radio"
              value="yes"
            />
            <Label
              className="nhsuk-radios__label"
              htmlFor="example-1"
              id="example-1--label"
            >
              <BaseLabel
                className="nhsuk-radios__label"
                htmlFor="example-1"
                id="example-1--label"
              >
                <label
                  className="nhsuk-label nhsuk-radios__label"
                  htmlFor="example-1"
                  id="example-1--label"
                >
                  Yes
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Radio>
        <Radio
          id="example-2"
          type="radio"
          value="no"
        >
          <div
            className="nhsuk-radios__item"
          >
            <input
              aria-labelledby="example-2--label"
              className="nhsuk-radios__input"
              id="example-2"
              name="example"
              onChange={[Function]}
              type="radio"
              value="no"
            />
            <Label
              className="nhsuk-radios__label"
              htmlFor="example-2"
              id="example-2--label"
            >
              <BaseLabel
                className="nhsuk-radios__label"
                htmlFor="example-2"
                id="example-2--label"
              >
                <label
                  className="nhsuk-label nhsuk-radios__label"
                  htmlFor="example-2"
                  id="example-2--label"
                >
                  No
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Radio>
      </div>
    </div>
  </FormGroup>
</Radios>
`;

exports[`Radios renders the conditional content if the radio reference = selected radio 1`] = `
<Radios
  id="example"
  name="example"
  role="radiogroup"
>
  <FormGroup
    id="example"
    inputType="radios"
    name="example"
    role="radiogroup"
  >
    <div
      className="nhsuk-form-group"
    >
      <div
        className="nhsuk-radios nhsuk-radios--conditional"
        id="example"
        role="radiogroup"
      >
        <Radio
          conditional={
            <p>
              Test
            </p>
          }
          id="example-1"
          type="radio"
          value="yes"
        >
          <div
            className="nhsuk-radios__item"
          >
            <input
              aria-labelledby="example-1--label"
              className="nhsuk-radios__input"
              id="example-1"
              name="example"
              onChange={[Function]}
              type="radio"
              value="yes"
            />
            <Label
              className="nhsuk-radios__label"
              htmlFor="example-1"
              id="example-1--label"
            >
              <BaseLabel
                className="nhsuk-radios__label"
                htmlFor="example-1"
                id="example-1--label"
              >
                <label
                  className="nhsuk-label nhsuk-radios__label"
                  htmlFor="example-1"
                  id="example-1--label"
                >
                  Yes
                </label>
              </BaseLabel>
            </Label>
          </div>
          <div
            className="nhsuk-radios__conditional"
            id="example-1--conditional"
          >
            <p>
              Test
            </p>
          </div>
        </Radio>
        <Radio
          id="example-2"
          type="radio"
          value="no"
        >
          <div
            className="nhsuk-radios__item"
          >
            <input
              aria-labelledby="example-2--label"
              className="nhsuk-radios__input"
              id="example-2"
              name="example"
              onChange={[Function]}
              type="radio"
              value="no"
            />
            <Label
              className="nhsuk-radios__label"
              htmlFor="example-2"
              id="example-2--label"
            >
              <BaseLabel
                className="nhsuk-radios__label"
                htmlFor="example-2"
                id="example-2--label"
              >
                <label
                  className="nhsuk-label nhsuk-radios__label"
                  htmlFor="example-2"
                  id="example-2--label"
                >
                  No
                </label>
              </BaseLabel>
            </Label>
          </div>
        </Radio>
      </div>
    </div>
  </FormGroup>
</Radios>
`;
